--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -3,11 +3,10 @@
 @import './partials/layouts';
 @import './partials/global';
 @import './partials/navigations';
-@import './partials/blueContainer';
+@import './partials/greyContainer';
 @import './partials/index';
 @import './partials/btn';
 @import './partials/testimonials';
-@import './partials/form';
 @import './partials/login';
 @import './partials/considerRehab';
 @import './partials/useProfessionals';
@@ -22,4 +21,8 @@
 @import './partials/search';
 @import './partials/globalsAdmin';
 @import './partials/404';
-
+@import './partials/ildstederOgOvn';
+@import './partials/ildsted';
+@import './partials/takPipe';
+@import './partials/rehabilitering';
+@import './partials/stalpipe';
