--- a/styles/scss/partials/_btn.scss
+++ b/styles/scss/partials/_btn.scss
@@ -1,13 +1,15 @@
 // Primary
 .primary-btn {
     border-radius: 20px;
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;background-color: $orange;
-    border: 2px solid $orange;
+    box-shadow: rgba(0, 0, 0, 0.20) 0px 3px 6px;
+    background-color: $link;
+    border: 2px solid $link;
     display: inline-block;
     height: 45px;
     width: 170px;
     position: relative;
-    transition: 0.3s ease-in-out;
+    transition: .2s ease-in-out;
+    z-index: 4;
 
     a {
         display: flex;
@@ -15,21 +17,21 @@
         align-items: center;
         width: 100%;
         height: 100%;
-        transition: 0.3s ease-in-out;
+        transition: .2s ease-in-out;
+        color: $white;
 
         &:hover {
-            font-size: 20px;
+            letter-spacing: 2px;
         }
     }
 
     &:hover {
-        background-color: $dark-blue;
-        color: #FFF;
-        border: 2px solid $dark-blue;
+        background-color: $orange;
+        border: 2px solid $orange;
     }
 
     &:active {
-        box-shadow: inset 0 0 10px #000;
+        box-shadow: inset 0 0 10px $white;
     }
 
     &:visited {
@@ -39,99 +41,86 @@
 
 // Secondary
 .secondary-btn {
+    border-radius: 20px;
+    box-shadow: rgba(0, 0, 0, 0.20) 0px 3px 6px;
+    background-color: transparent;
+    border: 2px solid $dark-blue;
     display: inline-block;
+    height: 45px;
+    width: 170px;
     position: relative;
+    transition: .2s ease-in-out;
+    z-index: 4;
 
-    &::after {
-        content: "";
-        position: absolute;
-        display: block;
-        width: 115%;
-        height: 1px;
-        background-color: #000;
-        left: 0;
-        bottom: -5px;
-        transition: ease-in-out 0.3s;
-        opacity: 0;
+    a {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 100%;
+        transition: .2s ease-in-out;
+        color: $dark-blue;
+
+        &:hover {
+            letter-spacing: 2px;
+            color: $white;
+        }
+    }
+
+    &:hover {
+        background-color: $dark-blue;
+        border: 2px solid $dark-blue;
+    }
+
+    &:active {
+        box-shadow: inset 0 0 10px $white;
     }
 }
 
-.secondary-btn:hover {
-    &::after {
-        bottom: 0;
-        opacity: 1;
-        width: 115%;
+// Links
+.link {
+    color: $link;
+    transition: 0.2s ease-in-out all;
+
+    &:hover {
+        text-decoration: underline;
+    }
+
+    &:active {
+        color: $orange;
     }
 }
 
-.secondary-btn__a {
-    width: 110%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    flex-wrap: nowrap;
-    padding-right: 5px;
-}
-
-.secondary-btn__a--text {
-    display: block;
-}
-
-.secondary-btn__img {
-    position: relative;
-    left: 5%;
-    transition: ease-in-out 0.3s;
-}
-
-.secondary-btn:hover .secondary-btn__img {
-    left: 13px;
+// Product link
+.ildsteder__product-container {
+    cursor: pointer;
 }
 
 // Nav
 .nav__link--extra .nav__link--extra-a {
     position: relative;
+    z-index: 9;
+    transition: .2s ease-in-out;
 
-    &::before, &::after {
-        content: "";
-        width: 100%;
-    }
-
-    &::after {
-        background-color: $dark-blue;
-        height: 1px;
-        position: absolute;
-        bottom: -5px;
-        left: 0;
-        opacity: 0;
-        transition: ease-in-out 0.3s;
+    &:hover {
+        color: $link;
+        letter-spacing: 2px;
     }
 }
 
-.nav__link--extra .nav__link--extra-a:hover {
-    color: $dark-blue;
-    &::after {
-        bottom: 0;
-        opacity: 1;
+.dropdown:hover .dropdown__link-container {
+    color: $link;
+
+    .nav__link--extra-a {
+        letter-spacing: 2px;
     }
 }
+
 
 .active {
-    color: $dark-blue;
+    color: $link;
+    letter-spacing: 2px;
     position: relative;
-
-    &::after {
-        content: "";
-        width: 100%; 
-    }
-
-    &::after {
-        background-color: $dark-blue;
-        height: 1px;
-        position: absolute;
-        bottom: 20px;
-        left: 0;
-        width: 100%;
-    }
 }
 
 .link__container {
@@ -139,32 +128,56 @@
 }
 
 // Buttons
-.submit {
-    background-color: $orange;
-}
-
-.submit:hover {
-    background-color: $dark-blue;
-    color: #FFF;
-    border: 2px solid $dark-blue;
-    font-size: 20px;
-    padding: 5px 0;
-}
-
 button {
-    border: 0px;
-    cursor: pointer;
-    height: 40px;
+    // border: 0px;
+    // cursor: pointer;
+    // height: 40px;
+    // border-radius: 20px;
+    // width: 150px;
+    // text-align: center;
+    // display: inline-block;
+    // position: relative;
+    // transition: 0.2s ease-in-out;
+
     border-radius: 20px;
-    width: 150px;
-    text-align: center;
+    box-shadow: rgba(0, 0, 0, 0.20) 0px 3px 6px;
+    background-color: $link;
+    border: 2px solid $link;
     display: inline-block;
+    height: 50px;
+    width: 170px;
     position: relative;
-    transition: 0.3s ease-in-out;
+    transition: .2s ease-in-out;
+    z-index: 4;
+    color: $white;
+    cursor: pointer;
 
     @include respond-to('small') {
         width: 300px;
     }
+
+    &:hover {
+        background-color: $orange;
+        border: 2px solid $orange;
+        letter-spacing: 2px;
+    }
+
+    &:active {
+        box-shadow: inset 0 0 10px $white;
+    }
+
+    &:visited {
+        border: 2px solid rgb(71, 71, 71);
+    }
+}
+
+// Services
+.our-services__services--btn {
+    transition: ease-in-out .2s;
+}
+
+.our-services__services--btn:hover {
+    transform: scale(1.1);
 }
 
 // Dialog boxes
