--- a/styles/scss/partials/_considerRehab.scss
+++ b/styles/scss/partials/_considerRehab.scss
@@ -1,52 +1,49 @@
 .consider-rehab {
-    @include respond-to('medium') {
-        margin-bottom: 250px;
-    }
+    margin-top: 50px;
 }
 
 .consider-rehab__text {
     margin-bottom: 50px;
-    @include respond-to('medium') {
-        margin-bottom: 100px;
+    width: 100%;
+    max-width: 300px;
+
+    @include respond-to('x-small') {
+        max-width: 100%;
     }
 
-    @include respond-to('large') {
-        margin-bottom: 150px;
+    @include respond-to('medium') {
+        margin-bottom: 100px;
     }
 }
 
 .consider-rehab__all-cards {
-    @include respond-to('medium') {
+    @include respond-to('small') {
         display: flex;
     }
 }
 
 .consider-rehab__card {
-    background-color: #FFF;
-    padding: 10px;
+    background-color: $white;
+    padding: 20px;
     margin: 15px auto;
     position: relative;
     z-index: 2;
 
     @include respond-to('small') {
-        max-width: 70%;
+        max-width: 30%;
+        margin: 0;
     }
 
     @include respond-to('medium') {
-        margin: 0 20px;
-        width: 300px;
+        width: 230px;
         height: auto;
         padding: 20px;
     }
 }
 
 .consider-rehab__card:nth-child(2) {
-    @include respond-to('medium') {
-        margin-right: 100px;
-    }
-
-    @include respond-to('large') {
-        margin-right: 300px;
+    @include respond-to('small') {
+        margin: 0 20px;
     }
 }
 
@@ -55,14 +52,8 @@
     align-items: flex-end;
 }
 
-.consider-rehab__card--number {
-    font-size: 50px;
-    margin-right: 10px;
-}
-
 .consider-rehab__card--p {
-    max-width: 80%;
-    margin-left: 5px;
+    margin-top: 10px;
 }
 
 .consider-rehab__img--container {
@@ -71,29 +62,37 @@
 }
 
 .consider-rehab__img {
-    width: 100%;
-    // max-width: 200px;
-    height: auto;
     position: relative;
-    // left: 100px;
-    bottom: 20px;
+    bottom: 100px;
     z-index: 1;
-    transform: scaleX(-1);
+    width: 100vw;
+    left: 50%;
+    right: 50%;
+    margin-left: -50vw;
+    margin-right: -50vw;
 
-    @include respond-to('medium') {
+    @include respond-to('small') {
         position: absolute;
-        max-width: 300px;
-        width: 100%;
-        left: 55%;
-        bottom: 50px;
+        width: 50%;
+        left: 0;
+        right: 0;
+        margin-left: 50vw;
+        margin-right: 50vw;  
+        bottom: -100px;
+        z-index: -1;
     }
 
     @include respond-to('large') {
-        max-width: 370px;
-        left: 50%;
+        width: 450px;
+        left: -50px;
+        bottom: -50px;
     }
 }
 
 .consider-rehab__btn {
-    width: 100px;
+    margin-top: -80px;
+
+    @include respond-to('small') {
+        margin-top: 30px;
+    }
 }
