--- a/styles/scss/partials/_form.scss
+++ b/styles/scss/partials/_form.scss
@@ -1,81 +1,81 @@
-.form-error {
-    color: $error;
-}
+// .form-error {
+//     color: $error;
+// }
 
-fieldset {
-    border: 1px solid transparent;
-}
+// fieldset {
+//     border: 1px solid transparent;
+// }
 
-.form input, textarea, .contact__dropdown {
-    border: 0px;
-    border-bottom: 1px solid #000;
-    padding: 3px;
-    height: 38px;
-}
+// .form input, textarea, .contact__dropdown {
+//     border: 0px;
+//     border-bottom: 1px solid #000;
+//     padding: 3px;
+//     height: 38px;
+// }
 
-textarea:focus, input:focus {
-    outline: none;
-}
+// textarea:focus, input:focus {
+//     outline: none;
+// }
 
-.input:focus {
-    border: 0px;
-    border-bottom: 2px solid #000;
-}
+// .input:focus {
+//     border: 0px;
+//     border-bottom: 2px solid #000;
+// }
 
-.input__required {
-    color: $dark-blue;
-    opacity: 0.7;
-}
+// .input__required {
+//     color: $dark-blue;
+//     opacity: 0.7;
+// }
 
-.contact__dropdown:hover {
-    background-color: $light-blue;
-}
+// .contact__dropdown:hover {
+//     background-color: $light-blue;
+// }
 
-// Error/success
-.red-border {
-    border-bottom: 2px solid $error !important;
-}
+// // Error/success
+// .red-border {
+//     border-bottom: 2px solid $error !important;
+// }
 
-.green-border {
-    border-bottom: 2px solid $success !important;
-}
+// .green-border {
+//     border-bottom: 2px solid $success !important;
+// }
 
-// Login
-.login__form-container {
-    background-color: #FFF;
-}
+// // Login
+// .login__form-container {
+//     background-color: #FFF;
+// }
 
-.login__input-container {
-    margin: 20px;
-}
+// .login__input-container {
+//     margin: 20px;
+// }
 
-.login__btn {
-    margin: 20px 0 20px 15px;
-}
+// .login__btn {
+//     margin: 20px 0 20px 15px;
+// }
 
-// Form dropdown
-.form-dropdown__custom {
-    position: relative;
-    border-bottom: 1px solid #000;
-}
+// // Form dropdown
+// .form-dropdown__custom {
+//     position: relative;
+//     border-bottom: 1px solid #000;
+// }
 
-.form-dropdown__input {
-    outline: none;
-    background-color: #fff;
-    border: 0;
-    padding: 3px;
-    cursor: pointer;
-    position: absolute;
-    width: 100%; 
-    height: 100%;
-    top: 0;
-    left: 0;
-}
+// .form-dropdown__input {
+//     outline: none;
+//     background-color: #fff;
+//     border: 0;
+//     padding: 3px;
+//     cursor: pointer;
+//     position: absolute;
+//     width: 100%; 
+//     height: 100%;
+//     top: 0;
+//     left: 0;
+// }
 
-.option {
-    background-color: #fff;
+// .option {
+//     background-color: #fff;
 
-    &:hover {
-        background-color: $light-blue;
-    }
-}
+//     &:hover {
+//         background-color: $light-blue;
+//     }
+// }
