--- a/styles/scss/partials/_index.scss
+++ b/styles/scss/partials/_index.scss
@@ -1,15 +1,16 @@
 // SoMe
 .index__some {
-    background-color: $light-blue;
+    background-color: $grey;
     position: relative;
     z-index: 3;
     display: flex;
     justify-content: center;
     width: 150px;
     margin-top: 20px;
+    margin-left: 20px;
 
     @include respond-to('small') {
-        margin: 60px 0 0 55px;
+        margin: 80px 0 0 110px;
         width: 150px;
     }
     
@@ -17,6 +18,7 @@
     @include respond-to('medium') {
         position: absolute;
         left: -100px;
+        margin: 80px 0 0 50px;
         top: 0;
         flex-direction: column;
 
@@ -51,15 +53,9 @@
 
 // Header
 .index__content-container {
-    margin: 10px 20px;
-
-    @include respond-to('medium') {
-        height: 65vh;
-        margin: 0;
-    }
-
     @include respond-to('large') {
-        height: 85vh;
+        height: 88vh;
+        margin: 0;
     }
 
     // Global
@@ -78,29 +74,61 @@
 
     // Text
     .index__header--text {
+        position: relative;
+        left: 20px;
+
+        @include respond-to('small') {
+            top: 30px;
+            left: 50px;
+        }
+
+        @include respond-to('medium') {
+            top: 80px;
+        }
+
         @include respond-to('large') {
-            padding-top: 50px;
-            padding-left: 50px;
+            left: 0;
+        }
+
+        @include respond-to('x-large') {
+            left: 7%;
+            top: 100px;
         }
     }
 
     .index__text--h1 {
-        width: 500px;
-        max-width: 85%;
+        max-width: 90%;
         padding-top: 30px;
 
+        @include respond-to('small') {
+            width: 480px;
+        }
+
+        @include respond-to('medium') {
+            width: 650px;
+        }
+
         @include respond-to('large') {
-            width: 550px;
+            width: 700px;
         }
     }
 
     .index__text--h3 {
-        margin: 20px 0 0 5px;
-        width: 350px;
-        max-width: 80%;
+        margin: 20px 0 0 0;
+        max-width: 90%;
 
         @include respond-to('small') {
-            // margin-bottom: 40px;
+            width: 350px;
+            margin: 30px 0;
+        }
+
+        @include respond-to('medium') {
+            margin: 30px 0;
+            width: 450px;
+        }
+
+        @include respond-to('x-large') {
+            margin-bottom: 50px;
         }
     }
 
@@ -109,6 +137,17 @@
         margin-top: 20px;
         display: flex;
         justify-content: flex-end;
+        // position: relative;
+        // width: 100vw;
+        // left: 50%;
+        // right: 50%;
+        // margin-left: -50vw;
+        // margin-right: -50vw;
+
+        @include respond-to('small') {
+            position: relative;
+            left: 10%;
+        }
     }
 
     .index__img {
@@ -119,58 +158,82 @@
     }
 
     .index__img-1 {
-        top: 70px;
+        top: -30px;
         height: 100%;
         width: 125px;
         left: 70px;
         z-index: 2;
 
         @include respond-to('small') {
-            width: 170px;
-            left: 90px;
-        }
-
-        @include respond-to('medium') {
+            width: 180px;
+            left: 30px;
             top: -20px;
         }
 
+        @include respond-to('medium') {
+            top: 50px;
+        }
+
         @include respond-to('large') {
+            width: 200px;
+            top: -50px;
+            left: -45px;
+        }
+
+        @include respond-to('x-large') {
+            width: 220px;
+            left: -80px;
+        }
+
+        @include respond-to('xx-large') {
             width: 240px;
-            top: -110px;
-            left: 110px;
+            top: 0;
+            left: -100px;
         }
     }
 
     .index__img-2 {
         left: 40px;
-        width: 200px;
+        width: 170px;
         z-index: 1;
 
-        @include respond-to('small') {
-            width : 300px;
-            top: -80px;
+        @include respond-to('small') { 
+            width : 250px;
+            top: -200px;
+            top: -130px;
+            left: -40px;
         }
 
         @include respond-to('medium') {
-            top: -140px;
+            top: -50px;
         }
 
         @include respond-to('large') {
-            width: 400px;
-            left: 50px;
-            top: -250px;
-            
+            width: 300px;
+            left: -100px;
+            top: -160px;
+        }
+
+        @include respond-to('x-large') {
+            width: 350px;
+            left: -125px;
+            top: -200px;
+        }
+
+        @include respond-to('xx-large') {
+            width: 375px;
+            left: -145px;
+            top: -200px;
         }
     }
 
     // Btn
     .index__btn-container {
-        margin: 30px 0 0 5px;
+        margin: 30px 0 0 0;
     }
 
     .our-services-container {
         .secondary-btn {        
-            // position: relative;
             display: flex;
             border: 1px solid blue;
         }
@@ -185,49 +248,42 @@
             top: -25px;
         }
     }
-
 }
 
 // Our services
 .our-services-container {
     margin: 0 auto;
-    max-width: 80%;
+    max-width: 100%;
     display: block;
 
-    @include respond-to('medium') {
-        max-width: 100%;
+    .our-services__services-container:nth-child(1), .our-services__services-container:nth-child(2) {
+        flex: 1;
     }
 
-    @include respond-to('large') {
-        max-width: 100%;
+    .our-services__services-container:nth-child(3), .our-services__services-container:nth-child(4) {
+        flex: 1;
     }
 
     h2 {
         text-align: center;
-        margin: 80px 0 30px 0;
+        margin: 20px 0 30px 0;
 
         @include respond-to('medium') {
-            margin-bottom: 50px;
-        }
-    }
-
-    .our-services__services-container {
-        position: relative;
-        margin: 0 10px 90px 10px;
-
-        @include respond-to('medium'){
-            margin: 20px 30px 50px 30px;
-        }
-
-        @include respond-to('large') {
-            margin: 50px 50px;
+            margin-bottom: 80px;
         }
     }
 
     .our-services__services {
-        @include respond-to('small') {
-            display: flex;
-            justify-content: center;
+        display: block;
+        
+
+        @include respond-to('x-small') {
+            display: grid;
+            grid-template-columns: 50% 50%;
+            grid-template-rows: 150px 150px;
+            width: 60%;
+            min-width: 300px;
+            margin: 0 auto;
         }
     }
 
@@ -236,6 +292,19 @@
             display: flex;
             justify-content: center;
             flex-wrap: wrap;
+            margin-bottom: 50px;
+        }
+
+        @include respond-to('medium') {
+            margin: 0 auto 50px auto;
+            flex-wrap: nowrap;
+            width: 80%;
+            min-width: 600px;
+        }
+
+        @include respond-to('large') {
+            width: 60%;
+            margin-bottom: 30px;
         }
     }
 
@@ -244,24 +313,17 @@
         z-index: 1;
         left: 50%;
         transform: translate(-50%, 0);
-
-        max-width: 220px;
-        height: auto;
+        width: 160px;
+        height: 50%;
 
         @include respond-to('small') {
-            max-width: 170px;
-            height: 330px;
+            width: 180px;
         }
 
         @include respond-to('medium') {
-            max-width: 200px;
-            height: 330px;
-        }
-
-        @include respond-to('large') {
             width: 220px;
-            height: 300px;
-        }
+            left: 52%;
+        } 
     }
 
     .our-services__services--info {
@@ -269,51 +331,58 @@
         z-index: 2;
         text-align: center;
         top: 30px;
-        height: 230px;
+        width: 140px;
+        margin: 50px auto;
+        height: 100px;
 
-        .our-services__h4 {
-            margin: 10px 0;
+        @include respond-to('x-small') {
+            margin: 0 auto;
         }
 
-        p {
-            width: 200px;
-            position: relative;
-            margin: 0 auto;
+        @include respond-to('small') {
+            height: 130px;
+        }
+
+        @include respond-to('medium') {
+            padding-top: 15px;
+            width: 220px;
+        }
+
+        .our-services__h4-container {
+            height: 60px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .our-services__h4 {
+            text-align: center;
+
 
             @include respond-to('small') {
-                width: 160px;
-            }
-
-            @include respond-to('large') {
-                width: 180px;
+                margin-top: 10px;
             }
         }
 
         .our-services__services--img {
-            width: 60px;
-            height: 60px;
+            width: 40px;
+            height: 40px;
             margin: 0 auto;
 
             @include respond-to('small') {
-                width: 35%;
+                width: 55px;
+                height: 55px;
             }
-        }
-    }
-    
-    .our-services__btn {
-        margin-top: 20px;
-        position: absolute;
-        bottom: -20px;
-        left: 50%;
-        transform: translate(-50%, 0);
-        width: 100%;
 
-        @include respond-to('small') {
-            bottom: -50px;
-        }
+            @include respond-to('medium') {
+                width: 60px;
+                height: 60px;
+            }
 
-        @include respond-to('large') {
-            bottom: -15px;
+            @include respond-to('large') {
+                width: 55px;
+                height: 55px;
+            }
         }
     }
 }
@@ -325,41 +394,30 @@ section {
 
 // Contact
 .index-contact {
-    background-color: #FFF;
+    background-color: $grey;
     margin-top: 50px;
     margin-bottom: -50px;
-    width: 120%;
-    margin-left: -5%;
+    position: relative;
+    width: 100vw;
+    left: 50%;
+    right: 50%;
+    margin-left: -50vw;
+    margin-right: -50vw;
     position: relative;
     z-index: 3;
-
-    @include respond-to('small') {
-        margin-top: 100px;
-    }
-
-    @include respond-to('medium') {
-        width: 130%;
-        margin-left: -15%;
-        margin-top: 150px;
-    }
-
-    @include respond-to('large') {
-        margin-top: 200px;
-    }
 }
 
 .index-contact__flex {
     display: flex;
     flex-direction: column;
     max-width: 90%;
-    padding: 50px 0;
+    padding-top: 50px;
     margin: auto;
 
     @include respond-to('medium') {
         flex-direction: row;
         max-width: 77%;
         justify-content: space-between;
-        padding: 100px 0;
     }
 }
 
@@ -368,12 +426,12 @@ section {
 
     @include respond-to('medium') {
         width: 30%;
+        margin: auto 0;
     }
 }
 
 .index-contact__h2 {
     margin-bottom: 40px;
-    max-width: 130px;
 }
 
 .index-container__children {
@@ -392,7 +450,7 @@ section {
 }
 
 .index-contact__img {
-    width: 30px;
+    width: 20px;
     height: 30px;
     margin-right: 30px;
 }
@@ -406,12 +464,20 @@ section {
 }
 
 .index-contact__map {
-    width: 220%;
+    width: 230%;
     margin-left: -15%;
 
     @include respond-to('medium') {
         width: 118%;
-        margin-left: 0;
+        margin-left: 30px;
+    }
+
+    @include respond-to('large') {
+        margin-left: 50px;
+    }
+
+    @include respond-to('x-large') {
+        margin-left: 100px;
     }
 }
 
