--- a/styles/scss/partials/_testimonials.scss
+++ b/styles/scss/partials/_testimonials.scss
@@ -1,107 +1,140 @@
-.texture {
-    width: 130%;
-    // height: 160vh;
-    height: 100%;
-    left: 50%;
-    transform: translate( -50%, 0 );
-    background-image: url('../../public/images/texture/bricks-texture.svg');
-    background-repeat: repeat;
-    background-size: contain;
-    position: absolute;
-    top: -50px;
-    z-index: -10;
-
-    @include respond-to('small') {
-        height: 130vh;
-    }
-
-    @include respond-to('medium') {
-        top: -100px;
-        height: 130%;
-    }
-
-    @include respond-to('large') {
-        height: 140%;
-    }
-}
-
-.testimonials {
+.testimonial {
     position: relative;
     z-index: 2;
-}
+    margin: 50px 0;
 
-.testimonials__stars {
-
-    @include respond-to('medium') {
-        width: 250px;
-        margin: auto 0;
-    }
-
-    img {
-        width: 30px;
-        height: 30px;
-
-        margin: 0 5px;
-    }
-}
-
-.testimonial__cards-container {
     @include respond-to('small') {
-        max-width: 80%;
-        margin: 30px auto;
+        margin: 100px 0;
     }
 
     @include respond-to('medium') {
-        display: flex;
-        justify-content: center;
-        max-width: 100%;
+        margin: 150px 0;
     }
 }
 
-.testimonial__card {
-    background-color: #FFF;
-    box-shadow: rgba(0, 0, 0, 0.2) 0px 18px 50px -10px;
-    padding: 15px;
-    margin: 20px 0;
-    
+.testimonial__container-text {
+    background-color: $white;
+    margin-right: 20px;
+    padding: 10px;
+
+    @include respond-to('small') {
+        padding: 30px;
+    }
+}
+
+.testimonial__star-container {
+    display: flex;
+}
+
+.testimonial__star {
+    width: 30px;
+    height: 30px;
+    margin-right: 10px;
+    margin-bottom: 20px;
+
     @include respond-to('medium') {
-        margin: 0 10px;
-        width: 40%;
-        padding: 25px; 
+        width: 40px;
+        height: 40px;
+    }
+}
+
+.embla {
+    overflow: hidden;
+    position: relative;
+    width: 100vw;
+    left: 50%;
+    right: 50%;
+    margin-left: -50vw;
+    margin-right: -50vw;
+  }
+  .embla__container {
+    display: flex;
+    position: relative;
+  }
+  .embla__slide {
+    position: relative;
+    flex: 0 0 100%;
+
+    @include respond-to('x-small') {
+      width: 260px;  
+    }
+
+    @include respond-to('small') {
+        width: 450px;
+    }
+
+    @include respond-to('medium') {
+        width: 580px;
     }
 
     @include respond-to('large') {
-        margin: 20px;
-        width: 25%;
-        padding: 25px;
+        width: 650px;
+    }
+
+    @include respond-to('large') {
+        width: 800px;
+    }
+
+    @include respond-to('x-large') {
+        width: 900px;
     }
 }
 
-.testimonial__heading {
-    @include respond-to('medium') {
-        display: flex;
-        flex-direction: row-reverse;
-        justify-content: start;
+.testimonial__prev-next-container {
+    display: none;
+
+    @include respond-to('small') {
+        margin: 20px auto 0 auto;
+        display: inline-block;
+        width: 90%;
     }
 
-    h2 {
-        @include respond-to('medium') {
-            margin-right: 20px;
-        }
+    .testimonial__prev, .testimonial__next {
+        position: absolute;
+        top: 30%;
+        width: 30px;
+        height: 50px;
+        background-repeat: no-repeat;
+        background-size: contain;
+        cursor: pointer;
     }
-}
 
-.testimonial__h3 {
-    position: relative;
+    .testimonial__next {
+        position: absolute;
+        right: 50px;
+        background-image: url(../../public/images/icons/arrow-left.png);
+    }
+
+    .testimonial__prev {
+        position: absolute;
+        left: 50px;
+        background-image: url(../../public/images/icons/arrow-left.png);
+        transform: scaleX(-1);
+    }
 }
 
 .testimonial__btn-container {
-    position: absolute;
-    right: 0;
-    bottom: -30px;
-    // width: 135px;
-}
+    position: relative;
+    width: 80%;
+    margin: 30px auto 0 auto;
 
-.testimonial__card--heading {
-    margin: 10px 0 20px 0;
+    @include respond-to('x-small') {
+        width: 280px;
+    }
+
+    @include respond-to('small') {
+        width: 510px;
+    }
+
+    @include respond-to('medium') {
+        width: 650px;
+    }
+
+    @include respond-to('large') {
+        width: 870px;
+    }
+
+    @include respond-to('x-large') {
+        width: 970px;
+    }
 }
